--- a/index.html
+++ b/index.html
@@ -13,8 +13,10 @@
         body {
             overflow: hidden;
             display: flex;
+            flex-direction: column;
             align-items: center;
             justify-content: center;
+            gap: 2rem;
             width: 100vw;
             height: 100vh;
             background-size: cover;
@@ -23,15 +25,25 @@
         }
         main {
             background-color: rgba(255, 255, 255, 0.781);
+            display: flex;
+            align-items: center;
+            flex-direction: column;
+            padding: 1rem;
             padding: 3rem;
             text-align: center;
             font-size: 1.2rem;
             font-weight: 600;
             border-radius: 0.7rem;
         }
+
+        img {
+            width: 70px;
+            
+        }
     </style>
 </head>
 <body>
+    <img src="/logo.png"/>
     <main>
         E havendo riscado o escrito de dívida que havia contra nós nas suas ordenanças, o qual nos era<br/>contrário, removeu-o do meio de nós, cravando-o na cruz
         <br/><br/>
