--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     </style>
 </head>
 <body>
-    <img src="/logo.png"/>
+    <img src="logo.png"/>
     <main>
         E havendo riscado o escrito de dívida que havia contra nós nas suas ordenanças, o qual nos era<br/>contrário, removeu-o do meio de nós, cravando-o na cruz
         <br/><br/>
